* Sat Mar 21 2009 Tom G. Christensen <irixpkg@jupiterrise.com> - 4.2.4-2
- Add the 3 upstream patches currently published for 4.2.4
- Add experimental support for __inline to gmp.h